--- a/2.1.AdivinaNumero/MainWindow.xaml
+++ b/2.1.AdivinaNumero/MainWindow.xaml
@@ -18,8 +18,8 @@
         </Grid.RenderTransform>
         <TextBlock HorizontalAlignment="Left" Margin="58,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="¿Qué número he pensado"/><Run Text="?"/></TextBlock>
         <TextBox x:Name="Numero"  HorizontalAlignment="Left" Height="23" Margin="272,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Reiniciar" HorizontalAlignment="Left" Margin="265,134,0,0" VerticalAlignment="Top" Width="88" Click="Button_Click"/>
-        <Button Content="Comprobar" HorizontalAlignment="Left" Margin="143,134,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Reiniciar" HorizontalAlignment="Left" Margin="265,134,0,0" VerticalAlignment="Top" Width="88" Click="ReiniciarButton_Click"/>
+        <Button Content="Comprobar" HorizontalAlignment="Left" Margin="143,134,0,0" VerticalAlignment="Top" Width="75" Click="ComprobarButton_Click"/>
         <TextBlock x:Name="Solucion" HorizontalAlignment="Left" Margin="272,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="23" Width="193"/>
 
     </Grid>
